--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -1,8 +1,6 @@
-<ul>
-  <% @animals.each do |animal| %>
-    <li><%= animal.name %></li>
-  <% end %>
-</ul>
+<p>Testando...</p>
+
+
 
 <!-- botão para voltar e ver minha pagina principal (index user) -->
  <%= link_to 'Voltar ao menu principal', user_path(@user), class: 'btn btn-primary' %>
