--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -8,3 +8,6 @@
 <p><%= @animal.story %></p>
 <p><%= @animal.city %></p>
 <p><%= @animal.state %></p>
+
+<!-- fazer botão para todos os 'matches' (index animals) -->
+<%= link_to 'Voltar', animal_path(@animal), class: 'btn btn-primary' %>
