--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -38,4 +38,5 @@
    </div>
 
  <%= f.button :submit, "Update", class:"btn-orange" %>
+ <%= link_to 'Voltar ao menu principal', user_path(@user), class: 'btn btn-primary' %>
   <% end %>
