--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,3 +4,5 @@
     <%= render 'form', user: @user %>
   </div>
 </div>
+
+<!-- botão para voltar e ver minha pagina principal (index user) no form-->
