--- a/app/views/animals/new.html.erb
+++ b/app/views/animals/new.html.erb
@@ -1,8 +1,4 @@
-<ul>
-  <% @animals.each do |animal| %>
-    <li><%= animal.name %></li>
-  <% end %>
-</ul>
+<%= render "form", animal: @animal %>
 
 <!-- botão para voltar e ver minha pagina principal (index user) -->
  <%= link_to 'Voltar ao menu principal', user_path(@user), class: 'btn btn-primary' %>
