--- a/app/views/adoptions/show.html.erb
+++ b/app/views/adoptions/show.html.erb
@@ -4,4 +4,4 @@
 
 
 <!-- fazer botão para todos os 'matches' (index animals) -->
-<%= link_to 'Ver outros aos animais com meu perfil ', animal_path(@animal), class: 'btn btn-primary' %>
+<%= link_to 'Ver outros animais com meu perfil ', animal_path(@animal), class: 'btn btn-primary' %>
