--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,15 +1,12 @@
 // Define variables for your color scheme
 // For example:
-
-
 $red: #FD1015;
 $blue: #0D6EFD;
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
-$gray: #0E0000;
+$gray: #1a1a1a;
 $light-gray: #F4F4F4;
-
 // Add your own colors like this:
 // Personal Color Scheme
 $dark-chocolat: #36241C;
@@ -18,5 +15,5 @@ $caramel: #A97947;
 $light-caramel: #DDB184;
 $beige: #E6CCB2;
 $caramel-grey: #F1ECE2;
-$caramel-white: #F6F6F6
-
+$caramel-white: #F6F6F6;
+$dark-green: #4f772d;
