--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 class="text-center mt-4 mb-0">Sign up</h2>
+  <h2 class="title text-center mt-4 mb-0">Cadastrar</h2>
 
   <div class="devise-card mt-4 mb-5 mx-auto">
 
@@ -26,7 +26,7 @@
       </div>
 
       <div class="form-actions">
-        <%= f.button :submit, "Sign up", class:"btn-green mb-1" %>
+        <%= f.button :submit, "Cadastrar", class:"btn-dark-green mb-1" %>
         <%= render "devise/shared/links" %>
       </div>
     <% end %>
