--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,4 +1,5 @@
 <ul>
+  <%= link_to "Adicionar animal", new_user_animal_path(current_user), class: "nav-link btn btn-dark-green" %>
   <% @animals.each do |animal| %>
     <li><%= animal.name %></li>
   <% end %>
