--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,22 +11,53 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Messages", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item dropdown">
-          <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
-          </a>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Action", "#", class: "dropdown-item" %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-            </div>
-          </li>
+            <% if user_signed_in? && current_user.adopter? %>
+              <li class="nav-item active">
+                <%= link_to "Home", "/", class: "nav-link" %>
+              </li>
+              <li class="nav-item active">
+                <%= link_to "Meus matches", "#", class: "nav-link" %>
+              </li>
+              <li class="nav-item active">
+                <%= link_to "Dashboard", dashboard_path(current_user), class: "nav-link" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to '<i class="fa-regular fa-comment"></i>'.html_safe, "#", class: "nav-link me-2" %>
+              </li>
+              <li class="nav-item dropdown">
+              <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
+              </a>
+                <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                  <%= link_to "Editar Perfil", "#", class: "dropdown-item" %>
+                  <%= link_to "Editar preferências", "#", class: "dropdown-item" %>
+                  <%= link_to "Sair", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+                </div>
+              </li>
+          <% else %>
+                <li class="nav-item active">
+                <%= link_to "Home", "/", class: "nav-link" %>
+              </li>
+              <li class="nav-item active">
+                <%= link_to "Meus animais", user_animals_path(current_user), class: "nav-link" %>
+              </li>
+              <li class="nav-item active">
+                <%= link_to "Dashboard", dashboard_path(current_user), class: "nav-link" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to '<i class="fa-regular fa-comment"></i>'.html_safe, "#", class: "nav-link me-2" %>
+              </li>
+              <li class="nav-item dropdown">
+              <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
+              </a>
+                <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                  <%= link_to "Editar Perfil", "#", class: "dropdown-item" %>
+                  <%= link_to "Editar preferências", "#", class: "dropdown-item" %>
+                  <%= link_to "Sair", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+                </div>
+              </li>
+          <% end %>
         <% else %>
            <li class="nav-item-btn d-flex">
             <%= link_to "Entrar", new_user_session_path, class: "nav-link" %>
