--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,5 +5,5 @@
 <p>State: <%= @user.state %></p>
 <p>Phone: <%= @user.phone %></p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Edit', edit_user_path(@user), class:"btn btn-dark-green" %> |
+<%= link_to 'Back', users_path, class:"btn btn-dark-green" %>
