--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,6 @@
 
-
   <%= simple_form_for @user , data: { controller: "tab" } do |f| %>
-  <div class="tab-content">
+    <div class="tab-content">
     <div class="tab-pane active" id="dados">
     <div class="name d-flex justify-content-between">
     <%= f.input :first_name, label: "Nome",  required: true %>
@@ -15,13 +14,13 @@
 
     <div class="tab-pane" id="preferencias" data-target="tab.preferencias">
        <div class="name d-flex justify-content-between">
-       <div class="col-3 mr-3"" >
+       <div class="col-3 mr-3" >
        <%= f.input :age, label: "Idade" %>
        </div>
-       <div class="col-3 mr-3"">
+       <div class="col-3 mr-3">
        <%= f.input :size, label: "Porte", collection: ['Pequeno', 'Médio', 'Grande'] %>
        </div>
-       <div class="col-3 mr-3"">
+       <div class="col-3 mr-3">
        <%= f.input :gender, label: "Genero", collection: ['Macho', 'Femea'] %>
        </div>
        <div class="col-3">
@@ -38,4 +37,5 @@
    </div>
 
  <%= f.button :submit, "Update", class:"btn-orange" %>
+ <%= link_to 'Voltar ao menu principal', user_path(@user), class: 'btn btn-dark-green' %>
   <% end %>
