--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <%= simple_form_for @animal do |f| %>
     <%= f.input :name, label: 'Nome', placeholder: 'Caramelo' %>
-    <%= f.input :photo, label: 'Foto', as: :file %>
+    <%# <%= f.input :photo, label: 'Foto', as: :file %> %>
     <%= f.input :specie, label: 'Espécie', as: :radio_buttons, collection: ['Gato', 'Cachorro'] %>
     <%= f.input :age, label: 'Idade', placeholder: '1-3' %>
     <%= f.input :size, label: 'Porte', as: :radio_buttons, collection: ['Pequeno', 'Médio', 'Grande'] %>
@@ -17,5 +17,4 @@
 </div>
 
 <!-- botão para voltar e ver minha pagina principal (index user) -->
- <%= link_to 'Voltar ao menu principal', user_path(@user), class: 'btn btn-primary' %>
-
+<%# <%= link_to 'Voltar ao menu principal', user_path(@user), class: 'btn btn-primary' %> %>
