--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
+    <%= link_to "/", class: "navbar-brand" do %>
       <%= image_tag "logo.png" %>
     <% end %>
 
@@ -16,7 +16,7 @@
                 <%= link_to "Home", "/", class: "nav-link" %>
               </li>
               <li class="nav-item active">
-                <%= link_to "Meus matches", "#", class: "nav-link" %>
+                <%= link_to "Meus matches", animals_path, class: "nav-link" %>
               </li>
               <li class="nav-item active">
                 <%= link_to "Dashboard", dashboard_path(current_user), class: "nav-link" %>
@@ -29,7 +29,7 @@
                 <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
               </a>
                 <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                  <%= link_to "Editar Perfil", "#", class: "dropdown-item" %>
+                  <%= link_to "Editar Perfil", edit_user_path(current_user), class: "dropdown-item" %>
                   <%= link_to "Editar preferências", "#", class: "dropdown-item" %>
                   <%= link_to "Sair", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
                 </div>
@@ -52,7 +52,7 @@
                 <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
               </a>
                 <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                  <%= link_to "Editar Perfil", "#", class: "dropdown-item" %>
+                  <%= link_to "Editar Perfil", edit_user_path(current_user), class: "dropdown-item" %>
                   <%= link_to "Editar preferências", "#", class: "dropdown-item" %>
                   <%= link_to "Sair", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
                 </div>
