alteração no _form = tirando erro de digitação

--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -17,4 +17,4 @@
 </div>
 
 <!-- botão para voltar e ver minha pagina principal (index user) -->
-<%# <%= link_to 'Voltar ao menu principal', user_path(@user), class: 'btn btn-primary' %> %>
+<%# <%= link_to 'Voltar ao menu principal', user_path(@user), class: 'btn btn-primary' %>
