--- a/app/views/adoption_forms/edit.html.erb
+++ b/app/views/adoption_forms/edit.html.erb
@@ -1,1 +1,7 @@
+<div class="container">
+<h2 class="text-center mt-4 mb-0">Editar Formulário de Adoção</h2>
+<div class="devise-card mt-4 mb-5 mx-auto">
 <%= render 'form', edit_adoptionform: @adoption_form %>
+</div>
+</div>
+<%# %>
