--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,17 @@
-<div class="container">
-  <h2 class="title text-center mt-4 mb-0">Cadastrar</h2>
-
-  <div class="devise-card mt-4 mb-5 mx-auto">
-
-    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= f.error_notification %>
-
-      <div class="form-inputs">
+<div class="devise-card mt-4 mb-5 mx-auto">
+  <%= simple_form_for @user , data: { controller: "tab" } do |f| %>
+    <div class="tab-content">
+      <div class="tab-pane active" id="dados">
         <div class="name d-flex justify-content-between">
-          <%= f.input :first_name, required: true %>
-          <%= f.input :last_name, required: true %>
+          <%= f.input :first_name,
+                      label: "Nome",
+                      autofocus: true,
+                      required: true %>
+          <%= f.input :last_name, label: "Sobrenome", required: true %>
         </div>
         <%= f.input :email,
                     required: true,
-                    autofocus: true,
-                    input_html: { autocomplete: "email" }%>
-        <div class="name d-flex justify-content-between">
+                    input_html: { autocomplete: "email" } %>
         <%= f.input :password,
                     required: true,
                     hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
@@ -23,12 +19,39 @@
         <%= f.input :password_confirmation,
                     required: true,
                     input_html: { autocomplete: "new-password" } %>
+        <%= f.input :city, label: "Cidade", required: true %>
+        <%= f.input :state, label: "Estado", required: true %>
+        <%= f.input :phone, label: "Telefone", required: true %>
+        <%= f.input :adopter, input_html: { data: { action: "change->tab#checkAdopter", target: "tab.adopter" } } %>
       </div>
 
+      <div class="tab-pane" id="preferencias" data-target="tab.preferencias">
+        <div class="name d-flex justify-content-between">
+          <div class="col-3 mr-3">
+            <%= f.input :age, label: "Idade" %>
+          </div>
+          <div class="col-3 mr-3">
+            <%= f.input :size, label: "Porte", collection: ['Pequeno', 'Médio', 'Grande'] %>
+          </div>
+          <div class="col-3 mr-3">
+            <%= f.input :gender, label: "Genero", collection: ['Macho', 'Femea'] %>
+          </div>
+          <div class="col-3">
+            <%= f.input :specie, label: "Especie", collection: ['Cachorro', 'Gato'] %>
+          </div>
+        </div>
+
+        <div class="name d-flex justify-content-between">
+          <%= f.input :vaccination, label: "Vacinado?" %>
+          <%= f.input :neutered, label: "Castrado?" %>
+        </div>
+      </div>
+    </div>
+    <div class="container">
       <div class="form-actions">
-        <%= f.button :submit, "Cadastrar", class:"btn-dark-green mb-1" %>
+        <%= f.button :submit, "Cadastrar", class: "btn-dark-green mb-1" %>
         <%= render "devise/shared/links" %>
       </div>
-    <% end %>
-  </div>
+    </div>
+  <% end %>
 </div>
