--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -192,7 +192,7 @@
 }
 
 .btn-dark-green-outline {
-    background-color: $light-gray;
+    background-color: #ffffff00;
     color: $gray;
     border: 1px solid $dark-green;
     border-radius: 10px;
