--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,17 +1,20 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Nunito:400,700%7CWork+Sans:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); // Define fonts for body and headers
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500|Roboto:300,400');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500%7CRoboto:300,400');
 // $body-font: "Work Sans", "Helvetica", "sans-serif";
 // $headers-font: "Nunito","Helvetica","sans-serif";
 // To use a font file (.woff) uncomment following lines
 @font-face {
     font-family: "LuckyBones";
-    src: font-url('app/assets/fonts/lucky_bones/Luckybones-Bold.ttf');
-    src: font-url('Luckybones-Bold.eot?#iefix') format('embedded-opentype'), font-url('Luckybones-Bold.woff') format('woff'), font-url('Luckybones-Bold.ttf') format('truetype')
+    src: url(asset-path('lucky_bones/Luckybones-Bold.eot'));
+    src: url(asset-path('lucky_bones/Luckybones-Bold.eot?#iefix')) format('embedded-opentype'), url(asset-path('lucky_bones/Luckybones-Bold.woff')) format('woff'), url(asset-path('lucky_bones/Luckybones-Bold.ttf')) format('truetype');
+    font-weight: bold;
+    font-style: normal;
 }
 
-$my-font: "LuckyBones";
+$my-font: 'LuckyBones',
+sans-serif;
 $header-font: $my-font;
 $base-font: "Poppins",
 sans-serif;
