--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
   <%= simple_form_for @animal do |f| %>
     <%= f.input :name, label: 'Nome', placeholder: 'Caramelo' %>
-    <%# <%= f.input :photo, label: 'Foto', as: :file %> %>
+    <%# <%= f.input :photo, label: 'Foto', as: :file %>
     <%= f.input :specie, label: 'Espécie', as: :radio_buttons, collection: ['Gato', 'Cachorro'] %>
     <%= f.input :age, label: 'Idade', placeholder: '1-3' %>
     <%= f.input :size, label: 'Porte', as: :radio_buttons, collection: ['Pequeno', 'Médio', 'Grande'] %>
-    <%= f.input :gender, label: 'Sexo', as: :radio_buttons, collection: ['Macho', 'Fêmea'] %>
+    <%= f.input :gender, label: 'Gênero', as: :radio_buttons, collection: ['Macho', 'Fêmea'] %>
     <%= f.input :vaccination, label: 'Vacinado', as: :boolean %>
     <%= f.input :neutered, label: 'Castrado', as: :boolean %>
     <%= f.input :city, label: 'Cidade', placeholder: 'São Paulo' %>
@@ -17,4 +17,4 @@
 </div>
 
 <!-- botão para voltar e ver minha pagina principal (index user) -->
-<%# <%= link_to 'Voltar ao menu principal', user_path(@user), class: 'btn btn-primary' %> %>
+<%# <%= link_to 'Voltar ao menu principal', user_path(@user), class: 'btn btn-primary' %>
