--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
                 <%= link_to "Meus matches", "#", class: "nav-link" %>
               </li>
               <li class="nav-item active">
-                <%= link_to "Dashboard", dashboard_path(current_user), class: "nav-link" %>
+                <%# <%= link_to "Dashboard", dashboard_path(current_user), class: "nav-link" %> %>
               </li>
               <li class="nav-item">
                 <%= link_to '<i class="fa-regular fa-comment"></i>'.html_safe, "#", class: "nav-link me-2" %>
@@ -42,7 +42,7 @@
                 <%= link_to "Meus animais", user_animals_path(current_user), class: "nav-link" %>
               </li>
               <li class="nav-item active">
-                <%= link_to "Dashboard", dashboard_path(current_user), class: "nav-link" %>
+                <%# <%= link_to "Dashboard", dashboard_path(current_user), class: "nav-link" %> %>
               </li>
               <li class="nav-item">
                 <%= link_to '<i class="fa-regular fa-comment"></i>'.html_safe, "#", class: "nav-link me-2" %>
