--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,3 +7,11 @@
 
 <%= link_to 'Edit', edit_user_path(@user), class:"btn btn-dark-green" %> |
 <%= link_to 'Back', users_path, class:"btn btn-dark-green" %>
+
+
+<% @matches.each do |match| %>
+  <div>
+    <h2><%= match[:animal].name %></h2>
+    <p>Pontuação de correspondência: <%= match[:score] %></p>
+  </div>
+<% end %>
