--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -36,6 +36,6 @@
    </div>
 
  <%= f.button :submit, "Update", class:"btn-orange" %>
- <%= link_to 'Voltar ao menu principal', user_path(@user), class: 'btn btn-dark-green' %>
+ <%= link_to 'Voltar', user_path(@user), class: 'btn btn-dark-green' %>
 
   <% end %>
