--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,13 +13,10 @@
         <% if user_signed_in? %>
             <% if user_signed_in? && current_user.adopter? %>
               <li class="nav-item active">
-                <%= link_to "Home", "/", class: "nav-link" %>
+                <%= link_to "Meus matches", user_path(current_user), class: "nav-link" %>
               </li>
               <li class="nav-item active">
-                <%= link_to "Meus matches", animals_path, class: "nav-link" %>
-              </li>
-              <li class="nav-item active">
-                <%# <%= link_to "Dashboard", dashboard_path(current_user), class: "nav-link" %> %>
+                <%= link_to "Dashboard", dashboard_path(current_user), class: "nav-link" %>
               </li>
               <li class="nav-item">
                 <%= link_to '<i class="fa-regular fa-comment"></i>'.html_safe, "#", class: "nav-link me-2" %>
@@ -36,10 +33,10 @@
               </li>
           <% else %>
               <li class="nav-item active">
-                <%= link_to "Home", "/", class: "nav-link" %>
+                <%= link_to "Animais para adoção", "#", class: "nav-link" %> <!-- colocar o link para INDEX ANIMAIS sem ranking-->
               </li>
               <li class="nav-item active">
-                <%# <%= link_to "Dashboard", dashboard_path(current_user), class: "nav-link" %> %>
+                <%= link_to "Dashboard", dashboard_path(current_user), class: "nav-link" %>
               </li>
               <li class="nav-item">
                 <%= link_to '<i class="fa-regular fa-comment"></i>'.html_safe, "#", class: "nav-link me-2" %>
