--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,27 +1,31 @@
-<div class="container">
-  <h3>Meus animais</h3>
-  <div class="row">
+<div class="container mb-4">
+  <div class="mb-4">
+    <p class="navigation mb-1 mt-5"><%= link_to "Home", "/", class:"navigation" %> / Animais para adoção</p>
+    <h4 class="second-title"><%=@animals.count %> animais para adoção</h4>
+  </div>
+
+  <div class="row d-flex align-items-between mx-3">
     <% @animals.each do |animal| %>
-      <% if current_user.id == animal.user.id %>
-        <div class="col-sm-4">
-          <div class="card">
-            <h3><%= animal.name %></h3>
-            <p><%= animal.specie %></p>
-            <p><%= animal.age %> anos</p>
-            <p><%= animal.city %> / <%= animal.state %></p>
-            <%= link_to "Mais informações", animal_path(animal), class: 'btn btn-yellow' %>
+        <div class="col-sm-3 mb-4">
+          <div class="card-index mx-auto my-auto">
+
+            <div>
+              <%= image_tag "cat.jpg", class:"image" %>
+            </div>
+
+            <div class="back-caramelo d-flex justify-content-between p-4">
+              <div class="animal-preview">
+                <h3 class="mb-0"><%= animal.name %></h3>
+                <p class="mb-0"><%= animal.city %>/<%= animal.state %></p>
+              </div>
+
+              <div class="icons">
+                <%= link_to "<i class=\"fa-solid fa-circle-info\"></i>".html_safe, animal_path(animal), class:"info" %>
+                <%= link_to "<i class=\"fa-solid fa-heart\"></i>".html_safe, animal_path(animal), class:"info" %>
+              </div>
+            </div>
           </div>
         </div>
-      <% else %>
-        <div class="col-sm-4">
-          <div class="card">
-            <h3>Você não tem animais cadastrados</h3>
-          </div>
-        </div>
-      <% end %>
     <% end %>
   </div>
-  <%= link_to "Adicionar animal", new_user_animal_path(current_user), class: "nav-link btn btn-dark-green" %>
 </div>
-
-  <%= link_to "Voltar", root_path, class: "nav-link btn btn-dark-yellow" %>
