--- a/app/assets/stylesheets/components/_devise_card.scss
+++ b/app/assets/stylesheets/components/_devise_card.scss
@@ -4,10 +4,19 @@
     box-shadow: 0 4px 4px rgba(0, 0, 0.2, 0.2);
     padding: 20px;
     width: 50%;
+    font-family: $base-font;
 }
 
 .title {
     font-family: $header-font;
     font-size: 50px;
     color: $caramel;
+}
+
+.first-name {
+    width: 260px;
+}
+
+.last-name {
+    width: 260px;
 }
