--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -1,20 +1,29 @@
 <div class="container">
-  <%= simple_form_for @animal do |f| %>
-    <%= f.input :name, label: 'Nome', placeholder: 'Caramelo' %>
-    <%# <%= f.input :photo, label: 'Foto', as: :file %>
-    <%= f.input :specie, label: 'Espécie', as: :radio_buttons, collection: ['Gato', 'Cachorro'] %>
-    <%= f.input :age, label: 'Idade', placeholder: '1-3' %>
-    <%= f.input :size, label: 'Porte', as: :radio_buttons, collection: ['Pequeno', 'Médio', 'Grande'] %>
-    <%= f.input :gender, label: 'Gênero', as: :radio_buttons, collection: ['Macho', 'Fêmea'] %>
-    <%= f.input :vaccination, label: 'Vacinado', as: :boolean %>
-    <%= f.input :neutered, label: 'Castrado', as: :boolean %>
-    <%= f.input :city, label: 'Cidade', placeholder: 'São Paulo' %>
-    <%= f.input :state, label: 'Estado', placeholder: 'São Paulo' %>
-    <%= f.input :story, :as => :text, :input_html => { class: 'test', :cols => 5, :rows => 8 }, label: 'História', placeholder: 'Descreva a história do resgate do seu animal', class:"textarea" %>
+  <div class="form-animals">
 
-    <%= f.button :submit, class:"btn btn-dark-green"%>
-  <% end %>
+    <div class="mb-4">
+      <p class="navigation mb-1 mt-5"><%= link_to "Dashboard", dashboard_path(current_user), class:"navigation" %> / Adicionar animal</p>
+      <h4 class="second-title">Adicionar Animal</h4>
+    </div>
+
+    <div class="form-info">
+      <%= simple_form_for @animal do |f| %>
+        <%= f.input :name, label: 'Nome', placeholder: 'Caramelo' %>
+        <%# < %= f.input :photo, label: 'Foto', as: :file %>
+        <%= f.input :specie, label: 'Espécie', as: :check_boxes, collection: ['Gato', 'Cachorro'], input_html: { class: "tag-selector" }, item_wrapper_class: 'tag-item' %>
+        <%= f.input :age, label: 'Idade', placeholder: '1-3' %>
+        <%= f.input :size, label: 'Porte', as: :check_boxes, collection: ['Pequeno', 'Médio', 'Grande'], input_html: { class: "tag-selector" }, item_wrapper_class: 'tag-item' %>
+        <%= f.input :gender, label: 'Gênero', as: :check_boxes, collection: ['Macho', 'Fêmea'], input_html: { class: "tag-selector" }, item_wrapper_class: 'tag-item' %>
+        <%= f.input :vaccination, label: 'Vacinado', as: :boolean, input_html: { class: "toggle p-0" } %>
+        <%= f.input :neutered, label: 'Castrado', as: :boolean, input_html: { class: "toggle p-0" } %>
+
+        <%= f.input :city, label: 'Cidade', placeholder: 'Digite a sua Cidade', class:"city" %>
+        <%= f.input :state, label: 'Estado', as: :select, collection: @states, placeholder: 'Selecione o Estado', include_blank: true, class:"state ms-3" %>
+
+        <%= f.input :story, :as => :text, :input_html => { class: 'test', :cols => 5, :rows => 8 }, label: 'História', placeholder: 'Descreva a história do resgate do seu animal', class:"textarea" %>
+
+        <%= f.button :submit, class:"btn btn-dark-green"%>
+      <% end %>
+    </div>
+  </div>
 </div>
-
-<!-- botão para voltar e ver minha pagina principal (index user) -->
-<%# <%= link_to 'Voltar ao menu principal', user_path(@user), class: 'btn btn-primary' %>
