--- a/app/views/animals/_my_animals.html.erb
+++ b/app/views/animals/_my_animals.html.erb
@@ -1,24 +1,39 @@
-<div class="container">
-  <div class="row">
+<div class="container mb-4">
+  <%= link_to "Adicionar animal", new_user_animal_path(current_user), class: "nav-link btn btn-dark-green mb-4 add-animal" %>
+  <div class="row d-flex align-items-between mx-3">
     <% @animals.each do |animal| %>
-      <% if current_user.id == animal.user.id %>
-        <div class="col-sm-4">
-          <div class="card">
-            <h3><%= animal.name %></h3>
-            <p><%= animal.specie %></p>
-            <p><%= animal.age %> anos</p>
-            <p><%= animal.city %> / <%= animal.state %></p>
-            <%= link_to "Mais informações", animal_path(animal), class: 'btn btn-yellow' %>
+      <% if current_user.id == animal.user.id && animal.present?%>
+        <% if animal.present? %>
+
+          <div class="col-sm-3 mb-4">
+            <div class="card-index mx-auto my-auto">
+
+              <div>
+                <%= image_tag "cat.jpg", class:"image" %>
+              </div>
+
+              <div class="back-caramelo d-flex justify-content-between p-4">
+                <div class="animal-preview">
+                  <h3 class="mb-0"><%= animal.name %></h3>
+                  <p class="mb-0"><%= animal.city %>/<%= animal.state %></p>
+                </div>
+
+                <div class="my-icons">
+                  <%= link_to "<i class=\"fa-solid fa-circle-info\"></i>".html_safe, animal_path(animal), class:"info me-1" %>
+                  <%= link_to '<i class="fa-solid fa-pen-to-square"></i>'.html_safe, edit_animal_path(animal), class:"edit me-1 edit" %>
+                  <%= link_to '<i class="fa-solid fa-trash"></i>'.html_safe, animal_path(animal), data: {turbo_method: :delete, turbo_confirm: "Você tem certeza?"}, class:"delete" %>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-      <% else %>
-        <div class="col-sm-4">
-          <div class="card">
-            <h3>Você não tem animais cadastrados</h3>
+          <% else %>
+          <div class="col-sm-4">
+            <div class="card">
+              <h3>Você não tem animais cadastrados</h3>
+            </div>
           </div>
-        </div>
+        <% end %>
       <% end %>
     <% end %>
   </div>
-  <%= link_to "Adicionar animal", new_user_animal_path(current_user), class: "nav-link btn btn-dark-green" %>
 </div>
