--- a/app/views/adoption_forms/_form.html.erb
+++ b/app/views/adoption_forms/_form.html.erb
@@ -22,9 +22,9 @@
     </div>
     <%= f.input :pergunta5, label: "Quantas horas você passa em casa por dia?", collection: ['4', '4-8', '4-12', '+ 12'] %>
     <%= f.input :pergunta6, label: "Quantas pessoas morando na residência? "%>
-    <%= f.input :pergunta7, label: "Ele ficará preso em algum cômodo ou terá acesso livre a todos os lugares?", collection: ['Sim', 'Não'] %>
+    <%= f.input :pergunta7, label: "Ele ficará preso em algum cômodo?", collection: ['Sim', 'Não'] %>
     <%= f.input :pergunta8, label: "Você aceita manter contato com a gente e mandar fotos e vídeos constantemente?", collection: ['Sim', 'Não'] %>
-     <%= f.button :submit, class:"btn-orange" %>
+    <%= f.button :submit, "Concluir", class:"btn-dark-green" %>
   <% end %>
 
    </div>
