--- a/app/views/adoptions/show.html.erb
+++ b/app/views/adoptions/show.html.erb
@@ -11,13 +11,29 @@
       <h1>Detalhes do Contrato de Adoção</h1>
       <p><strong>Adotante:</strong> <%= "#{@adoption.user.first_name}" %></p>
       <p><strong>Animal:</strong> <%= "#{@adoption.animal.name}" %></p>
-      <p><strong>Tutor:</strong><%= "#{@adoption.animal.user.first_name} #{@adoption.animal.user.last_name}" %></p>
+      <p><strong>Tutor:</strong> <%= "#{@adoption.animal.user.first_name} #{@adoption.animal.user.last_name}" %></p>
       <p><strong><%= "Espécie: " %></strong> <%= "#{@adoption.animal.specie}" %></p>
       <p><strong><%= "Idade: " %></strong> <%= "#{@adoption.animal.age}" %></p>
       <p><strong><%= "Porte: " %></strong> <%= "#{@adoption.animal.size}" %></p>
       <p><strong><%= "Gênero: " %></strong> <%= "#{@adoption.animal.gender}" %></p>
-      <p><strong><%= "Vacinação: " %></strong> <%= "#{@adoption.animal.vaccination}" %></p>
-      <p><strong><%= "Castrado: " %></strong> <%= "#{@adoption.animal.neutered}" %></p>
+      <p><strong><% if @animal.vaccination && @animal.gender == 'Macho' %>
+            <p><i class="fa-solid fa-check"></i> Vacinado</p>
+            <% elsif @animal.vaccination == false && @animal.gender == 'Macho' %>
+            <p><i class="fa-solid fa-xmark"></i> Não vacinado</p>
+            <% elsif @animal.vaccination && @animal.gender == 'Fêmea' %>
+            <p><i class="fa-solid fa-check"></i> Vacinada</p>
+            <% elsif @animal.vaccination == false && @animal.gender == 'Fêmea' %>
+            <p><i class="fa-solid fa-xmark"></i> Não vacinada</p>
+          <% end %></strong></p>
+      <p><strong><% if @animal.neutered && @animal.gender == 'Macho' %>
+            <p><i class="fa-solid fa-check"></i> Castrado</p>
+            <% elsif @animal.neutered == false && @animal.gender == 'Macho' %>
+            <p><i class="fa-solid fa-xmark"></i> Não castrado</p>
+            <% elsif @animal.neutered && @animal.gender == 'Fêmea' %>
+            <p><i class="fa-solid fa-check"></i> Castrada</p>
+            <% elsif @animal.neutered == false && @animal.gender == 'Fêmea' %>
+            <p><i class="fa-solid fa-xmark"></i> Não castrada</p>
+          <% end %></strong></p>
       <p><strong><%= "História: " %></strong> <%= "#{@adoption.animal.story}" %></p>
       <p><strong>Data da Entrevista:</strong> <%= "#{@adoption.date.strftime("%d/%m/%Y")}" %></p>
       <p><strong>Status:</strong> <%= "#{@adoption.status}" %></p>
