--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,7 +30,7 @@
               </a>
                 <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                   <%= link_to "Editar Perfil", edit_user_path(current_user), class: "dropdown-item" %>
-                  <%= link_to "Editar preferências", "#", class: "dropdown-item" %>
+                  <%= link_to "Editar preferências", edit_adoption_form_path(current_user), class: "dropdown-item" %>
                   <%= link_to "Sair", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
                 </div>
               </li>
@@ -39,7 +39,7 @@
                 <%= link_to "Home", "/", class: "nav-link" %>
               </li>
               <li class="nav-item active">
-                <%# <%= link_to "Dashboard", dashboard_path(current_user), class: "nav-link" %> %>
+                <%= link_to "Dashboard", dashboard_path(current_user), class: "nav-link" %>
               </li>
               <li class="nav-item">
                 <%= link_to '<i class="fa-regular fa-comment"></i>'.html_safe, "#", class: "nav-link me-2" %>
@@ -50,7 +50,7 @@
               </a>
                 <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                   <%= link_to "Editar Perfil", edit_user_path(current_user), class: "dropdown-item" %>
-                  <%= link_to "Editar preferências", "#", class: "dropdown-item" %>
+                  <!-- <%= link_to "Editar preferências", "#", class: "dropdown-item" %> -->
                   <%= link_to "Sair", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
                 </div>
               </li>
