--- a/app/views/adoptions/_my_applications.html.erb
+++ b/app/views/adoptions/_my_applications.html.erb
@@ -1,107 +1,97 @@
 <div class="container">
+  <% if current_user.adopter? %>
+    <div class="card-body">
+      <div class="customer d-flex flex-wrap">
+        <% if @adoptions.present? && @adoptions.any? %>
+          <% adopter_adoptions = @adoptions.select { |adoption| current_user.id == adoption.user.id } %>
 
-  <div class="card-body">
+          <% if adopter_adoptions.present? %>
+            <% adopter_adoptions.each do |adoption| %>
+              <div class="col-sm-3 mb-4">
+                <div class="card-index mx-auto my-auto">
 
-    <div class="customer d-flex flex-wrap">
-    <% if @adoptions.present? && @adoptions.any? %>
-      <% adopter_adoptions = @adoptions.select { |adoption| current_user.id == adoption.user.id } %>
+                  <div>
+                    <%= image_tag "cat.jpg", class:"image" %>
+                  </div>
 
-      <% if adopter_adoptions.present? %>
-        <% adopter_adoptions.each do |adoption| %>
-        <%# <div class="card-contracts p-4 mx-auto"> %>
-        <div class="card m-2" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <%# <p class="title pt-2 border-bottom mb-3"><strong><%= "Nome do animal: "%> <%# </strong> <%= "#{adoption.animal.name}" %> <%# </p> %>
-            <h5 class="card-title"><strong><%= "#{adoption.animal.name}" %></strong></h5>
-            <p><%= "#{adoption.animal.user.city}/#{adoption.animal.user.state}" %></p>
-            <p><%= "Tutor: " %><%= "#{adoption.animal.user.first_name} #{adoption.animal.user.last_name}" %></p>
-            <%#<p><strong><%= "Espécie: " %><%#</strong> <%= "#{adoption.animal.specie}" %></p>
-            <%#<p><strong><%= "Idade: " %><%#</strong> <%= "#{adoption.animal.age}" %></p>
-            <%#<p><strong><%= "Porte: " %><%#</strong> <%= "#{adoption.animal.size}" %></p>
-            <%#<p><strong><%= "Gênero: " %><%#</strong> <%= "#{adoption.animal.gender}" %></p>
-            <%#<p><strong><%= "Vacinação: " %><%#</strong> <%= "#{adoption.animal.vaccination}" %></p>
-            <%#<p><strong><%= "Castrado: " %><%#</strong> <%= "#{adoption.animal.neutered}" %></p>
-            <%#<p><strong><%= "História: " %><%#</strong> <%= "#{adoption.animal.story}" %></p>
-            <%#<p><strong><%= "Data: " %><%#</strong> <%= "#{adoption.date.strftime("%d/%m/%Y")}" %></p>
+                  <div class="back-caramelo d-flex justify-content-between p-4">
+                    <div class="animal-preview">
+                      <h3 class="mb-0"><%= "#{adoption.animal.name}" %></h3>
+                      <p class="mb-0"><%= "Tutor(a): " %><%= "#{adoption.animal.user.first_name} #{adoption.animal.user.last_name}" %></p>
+                      <p class="mb-0"><%= "#{adoption.animal.user.city}/#{adoption.animal.user.state}" %></p>
 
-            <% if adoption.status == 'Pending' %>
-                <p class="d-inline-flex"><strong><%= "Status: "%></strong><p class="d-inline-flex p-1 ms-1 border border-warning text-warning"><%= "#{adoption.status}" %></p></p>
-              <% elsif adoption.status == 'Accepted' %>
-                <p class="d-inline-flex"><strong><%= "Status: "%></strong><p class="d-inline-flex p-1 ms-1 border border-success text-success"><%= "#{adoption.status}" %></p></p>
-            <% else %>
-                <p class="d-inline-flex"><strong><%= "Status: "%></strong><p class="d-inline-flex p-1 ms-1 border border-danger text-danger"><%= "#{adoption.status}" %></p></p>
+                      <% if adoption.status == 'Pendente' %>
+                        <p class="d-inline-flex"><strong><%= "Status: "%></strong><p class="d-inline-flex p-1 ms-1 border border-warning text-warning"><%= "#{adoption.status}" %></p></p>
+                      <% elsif adoption.status == 'Aceito' %>
+                        <p class="d-inline-flex"><strong><%= "Status: "%></strong><p class="d-inline-flex p-1 ms-1 border border-success text-success"><%= "#{adoption.status}" %></p></p>
+                      <% else %>
+                        <p class="d-inline-flex"><strong><%= "Status: "%></strong><p class="d-inline-flex p-1 ms-1 border border-danger text-danger"><%= "#{adoption.status}" %></p></p>
+                      <% end %>
+
+                      <%= link_to "Ver mais detalhes", user_animal_adoption_path(user_id: adoption.user.id, animal_id: adoption.animal.id, id: adoption.id), class:'btn-yellow-outline w-100' %>
+                      <%= link_to "Visualizar perfil", user_path(adoption.animal.user.id), class: 'btn-yellow-outline w-100' %>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
             <% end %>
-
-
-            <%= link_to "Ver mais detalhes", user_animal_adoption_path(user_id: adoption.user.id, animal_id: adoption.animal.id, id: adoption.id), class:'btn-yellow-outline w-100' %>
-          </div>
-        </div>
-      <% end %>
-
-  </div>
-      <% else %>
-          <div class="card-contracts p-4 w-100">
-            <p class="d-flex mb-0">Você ainda tem nenhuma adoção</p>
-          </div>
-
-      <% end %>
-    <% else %>
-    <div class="card-contracts p-4 w-100">
-      <p class="mb-0">Nenhuma aplicação encontrada</p>
-    </div>
-    <% end %>
-  </div>
-
-
-
-  <div class="customer d-flex flex-wrap">
-    <% if @adoptions.present? && @adoptions.any? %>
-    <% owner_adoptions = @adoptions.select { |adoption| current_user.id == adoption.animal.user.id } %>
-
-      <% if owner_adoptions.present? %>
-        <% owner_adoptions.each do |adoption| %>
-        <%# <div class="card-contracts p-4 mx-auto"> %>
-          <div class="card m-2" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-            <%# <p class="title pt-2 border-bottom mb-3"><strong><%= "Nome do animal: "%> <%# </strong> <%= "#{adoption.animal.name}" %> <%# </p> %>
-              <h5 class="card-title"><strong><%= "#{adoption.animal.name}" %></strong></h5>
-              <p><%= "#{adoption.animal.user.city}/#{adoption.animal.user.state}" %></p>
-              <p><%= "Tutor: " %><%= "#{adoption.animal.user.first_name} #{adoption.animal.user.last_name}" %></p>
-              <%#<p><strong><%= "Espécie: " %><%#</strong> <%= "#{adoption.animal.specie}" %></p>
-              <%#<p><strong><%= "Idade: " %><%#</strong> <%= "#{adoption.animal.age}" %></p>
-              <%#<p><strong><%= "Porte: " %><%#</strong> <%= "#{adoption.animal.size}" %></p>
-              <%#<p><strong><%= "Gênero: " %><%#</strong> <%= "#{adoption.animal.gender}" %></p>
-              <%#<p><strong><%= "Vacinação: " %><%#</strong> <%= "#{adoption.animal.vaccination}" %></p>
-              <%#<p><strong><%= "Castrado: " %><%#</strong> <%= "#{adoption.animal.neutered}" %></p>
-              <%#<p><strong><%= "História: " %><%#</strong> <%= "#{adoption.animal.story}" %></p>
-              <%#<p><strong><%= "Data: " %><%#</strong> <%= "#{adoption.date.strftime("%d/%m/%Y")}" %></p>
-
-              <% if adoption.status == 'Pending' %>
-                <p class="d-inline-flex"><strong><%= "Status: "%></strong><p class="d-inline-flex p-1 ms-1 border border-warning text-warning"><%= "#{adoption.status}" %></p></p>
-              <% elsif adoption.status == 'Accepted' %>
-                <p class="d-inline-flex"><strong><%= "Status: "%></strong><p class="d-inline-flex p-1 ms-1 border border-success text-success"><%= "#{adoption.status}" %></p></p>
-              <% else %>
-                <p class="d-inline-flex"><strong><%= "Status: "%></strong><p class="d-inline-flex p-1 ms-1 border border-danger text-danger"><%= "#{adoption.status}" %></p></p>
-              <% end %>
-
-              <%= link_to "Ver mais detalhes", user_animal_adoption_path(user_id: adoption.user.id, animal_id: adoption.animal.id, id: adoption.id), class:'btn-yellow-outline w-100' %>
+          <% else %>
+            <div class="card-contracts p-4 w-100">
+              <p class="d-flex mb-0">Você ainda não tem nenhuma adoção</p>
             </div>
+          <% end %>
+        <% else %>
+          <div class="card-contracts p-4 w-100">
+            <p class="mb-0">Nenhuma aplicação encontrada</p>
           </div>
         <% end %>
+      </div>
+    </div>
+  <% else %>
 
-      <% else %>
-        <div class="card-contracts p-4 w-100">
-          <p class="d-flex mb-0">Você ainda tem nenhuma adoção</p>
-        </div>
-      <% end %>
+    <% if @adoptions.present? && @adoptions.any? %>
+      <% owner_adoptions = @adoptions.select { |adoption| current_user.id == adoption.animal.user.id } %>
+        <% if owner_adoptions.present? %>
+          <% owner_adoptions.each do |adoption| %>
+            <div class="col-sm-3 mb-4">
+              <div class="card-index mx-auto my-auto">
+                <div>
+                  <%= image_tag "cat.jpg", class:"image" %>
+                </div>
+                <div class="back-caramelo d-flex justify-content-between p-4">
+                  <div class="animal-preview">
+                    <h3 class="mb-0"><%= "#{adoption.animal.name}" %></h3>
+                    <p class="mb-0"><%= "Adotante: " %><%= "#{adoption.user.first_name} #{adoption.user.last_name}" %></p>
+                    <p class="mb-0"><%= "#{adoption.user.city}/#{adoption.user.state}" %></p>
 
+                    <% if adoption.status == 'Pendente' %>
+                      <p class="d-inline-flex"><strong><%= "Status: "%></strong><p class="d-inline-flex p-1 ms-1 border border-warning text-warning"><%= "#{adoption.status}" %></p></p>
+                    <% elsif adoption.status == 'Aceito' %>
+                      <p class="d-inline-flex"><strong><%= "Status: "%></strong><p class="d-inline-flex p-1 ms-1 border border-success text-success"><%= "#{adoption.status}" %></p></p>
+                    <% else %>
+                      <p class="d-inline-flex"><strong><%= "Status: "%></strong><p class="d-inline-flex p-1 ms-1 border border-danger text-danger"><%= "#{adoption.status}" %></p></p>
+                    <% end %>
+
+                    <%= link_to "Ver detalhes", user_animal_adoption_path(user_id: adoption.user.id, animal_id: adoption.animal.id, id: adoption.id), class:'btn-yellow-outline w-100' %>
+                    <%= link_to "Visualizar perfil", user_path(adoption.user), class: 'btn-yellow-outline w-100' %>
+                    
+                  </div>
+                </div>
+              </div>
+            </div>
+          <% end %>
+        <% else %>
+          <div class="card-contracts p-4 w-100">
+            <p class="d-flex mb-0">Você ainda não possui nenhum interessado</p>
+          </div>
+        <% end %>
     <% else %>
       <div class="card-contracts p-4 w-100">
-        <p class="mb-0">Nenhuma aplicação encontrada</p>
+        <p class="mb-0">Nenhuma adoção encontrada</p>
       </div>
     <% end %>
- </div>
 
+
+  <% end %>
 </div>
