--- a/app/views/adoption_forms/new.html.erb
+++ b/app/views/adoption_forms/new.html.erb
@@ -1,11 +1,6 @@
-<% if flash[:alert] %>
-  <p><%= flash[:alert] %></p>
-<% end %>
-
-<% if @errors %>
-  <% @errors.each do |error| %>
-    <p><%= error %></p>
-  <% end %>
-<% end %>
-
-<%= render 'form', adoption_form: @adoption_form %>
+<div class="container">
+  <h2 class="title text-center mt-4 mb-2">Inserir Formulario de Adoção</h2>
+  <div class="devise-card mt-4 mb-5 mx-auto">
+    <%= render 'form', adoption_form: @adoption_form %>
+  </div>
+</div>
