--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,7 +16,7 @@
                 <%= link_to "Home", "/", class: "nav-link" %>
               </li>
               <li class="nav-item active">
-                <%= link_to "Meus matches", animals_path, class: "nav-link" %>
+                <%= link_to "Meus matches", matchs_path, class: "nav-link" %>
               </li>
               <li class="nav-item active">
                 <%= link_to "Dashboard", dashboard_path(current_user), class: "nav-link" %>
