--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,41 +1,43 @@
   <%= simple_form_for @user , data: { controller: "tab" } do |f| %>
     <div class="tab-content">
-    <div class="tab-pane active" id="dados">
-    <div class="name d-flex justify-content-between">
-    <%= f.input :first_name, label: "Nome",  required: true %>
-    <%= f.input :last_name, label: "Sobrenome", required: true %>
+      <div class="tab-pane active" id="dados">
+        <div class="name d-flex justify-content-between">
+          <div class="col-6" >
+            <%= f.input :first_name, label: "Nome",  required: true %>
+          </div>
+          <div class="col-6 mx-1" >
+            <%= f.input :last_name, label: "Sobrenome", required: true %>
+          </div>
+        </div>
+        <%= f.input :city, label: "Cidade", required: true %>
+        <%= f.input :state, label: "Estado", required: true %>
+        <%= f.input :phone, label: "Telefone", required: true %>
+        <%= f.input :adopter, input_html: { data: { action: "change->tab#checkAdopter", target: "tab.adopter" } } %>
+      </div>
+
+      <div class="tab-pane" id="preferencias" data-target="tab.preferencias">
+        <div class="name d-flex justify-content-between">
+          <div class="col-3" >
+            <%= f.input :age, label: "Idade", collection: ['Filhote', 'Adulto', 'Idoso'] %>
+          </div>
+          <div class="col-3 mx-1">
+            <%= f.input :size, label: "Porte", collection: ['Pequeno', 'Médio', 'Grande'] %>
+          </div>
+          <div class="col-2.5">
+            <%= f.input :gender, label: "Genero", collection: ['Macho', 'Femea'] %>
+          </div>
+          <div class="col-3.5  mx-1">
+            <%= f.input :specie, label: "Especie", collection: ['Cachorro', 'Gato']%>
+          </div>
+        </div>
+
+        <div class="name d-flex justify-content-between">
+          <%= f.input :vaccination, label: "Vacinado?"%>
+          <%= f.input :neutered, label: "Castrado?"%>
+        </div>
+      </div>
     </div>
-    <%= f.input :city, label: "Cidade", required: true %>
-    <%= f.input :state, label: "Estado", required: true %>
-    <%= f.input :phone, label: "Telefone", required: true %>
-    <%= f.input :adopter, input_html: { data: { action: "change->tab#checkAdopter", target: "tab.adopter" } } %>
-    </div>
 
-    <div class="tab-pane" id="preferencias" data-target="tab.preferencias">
-       <div class="name d-flex justify-content-between">
-       <div class="col-3 mr-3" >
-       <%= f.input :age, label: "Idade", collection: ['Filhote', 'Adulto', 'Idoso'] %>
-       </div>
-       <div class="col-3 mr-3">
-       <%= f.input :size, label: "Porte", collection: ['Pequeno', 'Médio', 'Grande'] %>
-       </div>
-       <div class="col-3 mr-3">
-       <%= f.input :gender, label: "Genero", collection: ['Macho', 'Femea'] %>
-       </div>
-       <div class="col-3">
-       <%= f.input :specie, label: "Especie", collection: ['Cachorro', 'Gato']%>
-       </div>
-       </div>
-
-       <div class="name d-flex justify-content-between">
-       <%= f.input :vaccination, label: "Vacinado?"%>
-       <%= f.input :neutered, label: "Castrado?"%>
-       </div>
-
-     </div>
-   </div>
-
- <%= f.button :submit, "Update", class:"btn-orange" %>
- <%= link_to 'Voltar ao menu principal', user_path(@user), class: 'btn btn-dark-green' %>
-
+    <%= f.button :submit, "Update", class:"btn-orange" %>
+    <%= link_to 'Voltar ao menu principal', user_path(@user), class: 'btn btn-dark-green' %>
   <% end %>
