--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 class="text-center mt-4 mb-0">Edit Profile</h2>
+  <h2 class="title text-center mt-4 mb-0">Editar Perfil</h2>
   <div class="devise-card mt-4 mb-5 mx-auto">
     <%= render 'form', user: @user %>
   </div>
