--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -10,7 +10,11 @@
           <div class="card-index mx-auto my-auto">
 
             <div>
-              <%= image_tag "cat.jpg", class:"image" %>
+              <% if animal.photo.attached? %>
+                <%= cl_image_tag animal.photo.key, width: 240, height: 240, crop: :fill %>
+              <% else %>
+                <%= image_tag "CRMLO.png", width: 240, height: 240 %>
+              <% end %>
             </div>
 
             <div class="back-caramelo d-flex justify-content-between p-4">
