--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -9,7 +9,7 @@
     <div class="form-info">
       <%= simple_form_for @animal do |f| %>
         <%= f.input :name, label: 'Nome', placeholder: 'Caramelo' %>
-        <%# < %= f.input :photo, label: 'Foto', as: :file %>
+        <%= f.input :photo, as: :file %>
         <%= f.input :specie, label: 'Espécie', as: :radio_buttons, collection: ['Gato', 'Cachorro'], input_html: { class: "tag-selector" }, item_wrapper_class: 'tag-item' %>
         <%= f.input :age, label: 'Idade', as: :radio_buttons, collection: ['Filhote', 'Adulto', 'Idoso'], placeholder: 'Filhote', input_html: { class: "tag-selector" }, item_wrapper_class: 'tag-item' %>
         <%= f.input :size, label: 'Porte', as: :radio_buttons, collection: ['Pequeno', 'Médio', 'Grande'], input_html: { class: "tag-selector" }, item_wrapper_class: 'tag-item' %>
@@ -22,7 +22,7 @@
 
         <%= f.input :story, :as => :text, :input_html => { class: 'test', :cols => 5, :rows => 8 }, label: 'História', placeholder: 'Descreva a história do resgate do seu animal', class:"textarea" %>
 
-        <%= f.button :submit, "Cadastras animal", class:"btn btn-dark-green"%>
+        <%= f.button :submit, "Cadastrar animal", class:"btn btn-dark-green"%>
       <% end %>
     </div>
   </div>
