--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,7 +26,7 @@
               </li>
               <li class="nav-item dropdown">
               <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
+                <%= cl_image_tag current_user.photo.key, class: "avatar", alt: "dropdown menu", height: 40, width: 40 %>
               </a>
                 <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                   <%= link_to "Editar Perfil", edit_user_path(current_user), class: "dropdown-item" %>
@@ -46,7 +46,7 @@
               </li>
               <li class="nav-item dropdown">
               <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
+                <%= cl_image_tag current_user.photo.key, class: "avatar", alt: "dropdown menu", height: 40, width: 40 %>
               </a>
                 <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                   <%= link_to "Editar Perfil", edit_user_path(current_user), class: "dropdown-item" %>
